Overflow Fixed

--- a/css/style.css
+++ b/css/style.css
@@ -189,7 +189,7 @@ form {
   html {
     font-size: 10px;
     position: relative;
-    overflow: hidden;
+   
   }
   .header {
     padding: 0;
